# turtlebot

./: CMakeLists.txt  README.md  package.xml
.vim/: coc-settings.json
config/: control.yaml  diff_drive.yaml
fiducials/aruco_detect/launch/: aruco_detect.launch
include/turtlebot/: turtlebot_control.h  turtlebot_controller_deprecated.h
kobuki/kobuki_control/: CMakeLists.txt  package.xml
kobuki/kobuki_control/include/kobuki_control/: core.h
kobuki/kobuki_control/src/: controltest.cpp  kobuki_control.cpp
kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
launch/: bringup.launch  control.launch  debug.launch
layouts/: plotjuggler.xml
plugins/: turtlebot_controller.xml
ros2_interface/: CMakeLists.txt  package.xml
ros2_interface/include/turtlebot/interface/: interface.hpp
ros2_interface/src/: interface.cpp  main.cpp
ros_astra_camera/: 56-orbbec-usb.rules
ros_astra_camera/launch/: astra_rgb.launch
ros_astra_camera/launch/includes/: astra_frames.launch
scripts/: teleop_twist_keyboard.py
src/: main.cpp  turtlebot_control.cpp  turtlebot_controller_deprecated.cpp
srv/: vel.srv
turtlebot/: CMakeLists.txt  package.xml
turtlebot/launch/: turtlebot.launch.py
turtlebot/turtlebot_bringup/launch/: minimal.launch
turtlebot_control/: CMakeLists.txt  package.xml
turtlebot_control/config/: config.yaml
turtlebot_control/include/turtlebot/turtlebot_control/: control.hpp
turtlebot_control/include/turtlebot_control/: control.h
turtlebot_control/src/: control.cpp  main.cpp
turtlebot_description/: CMakeLists.txt  package.xml
turtlebot_description/env-hooks/: turtlebot_description.dsv.in  turtlebot_description.sh.in
turtlebot_description/launch/: ign.launch.py  sim.launch.py  turtlebot.launch.py  visualize.launch.py
turtlebot_description/models/kinect/: model.sdf
turtlebot_description/models/turtlebot3_burger/: model.config  model.sdf
turtlebot_description/models/turtlebot3_burger/meshes/: burger_base.dae  lds.dae  tire.dae
turtlebot_description/robots/: kobuki_hexagons_astra.urdf.xacro
turtlebot_description/urdf/: common_properties.urdf.xacro  kobuki.urdf.xacro  kobuki_hexagons_astra.urdf.xacro  turtlebot_common_library.urdf.xacro  turtlebot_ign.urdf.xacro  turtlebot_properties.urdf.xacro
turtlebot_description/urdf/sensors/: astra.urdf.xacro
turtlebot_description/urdf/stacks/: hexagons.urdf.xacro
turtlebot_description/worlds/: turtlebot.sdf  turtlebot_world.sdf
turtlebot_gazebo/: CMakeLists.txt  package.xml
turtlebot_gazebo/launch/: turtlebot_world.launch
turtlebot_gazebo/launch/includes/: kobuki.launch.xml
turtlebot_interface/: CMakeLists.txt  package.xml
turtlebot_interface/include/turtlebot/: headers.hpp
turtlebot_interface/include/turtlebot/interface/: interface.hpp
turtlebot_interface/include/turtlebot/turtlebot_interface/: core.hpp  interface.hpp
turtlebot_interface/launch/: interface.launch  interface.launch.py
turtlebot_interface/src/: interface.cpp  main.cpp
turtlebot_mapping/: CMakeLists.txt  package.xml
turtlebot_mapping/launch/: gmapping.launch  mapping.launch
turtlebot_msgs/: CMakeLists.txt  package.xml
turtlebot_msgs/srv/: Goal.srv
turtlebot_shepherd/: CMakeLists.txt  package.xml
turtlebot_shepherd/launch/: shepherd.launch
turtlebot_vision/: CMakeLists.txt  package.xml
turtlebot_vision/include/turtlebot/turtlebot_vision/: core.hpp  vision.hpp
turtlebot_vision/include/turtlebot_vision/: vision.h
turtlebot_vision/launch/: vision.launch
turtlebot_vision/src/: main.cpp  vision.cpp
urdf/: common_properties.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.transmission.xacro  turtlebot3_burger.urdf.xacro
