<package format='2'>

  <name>turtlebot</name>
  <version>1.0.0</version>
  <description>
  This package contains the turtlebot stuffz 
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- <export> -->
  <!--   <turtlebot plugin="${prefix}/plugins/turtlebot_controller.xml"/> -->
  <!-- </export> -->

</package>
