<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>turtlebot</name>
  <version>0.0.1</version>
  <description>Package that integrates the turtlebot</description>
  <maintainer email="praneeth.pep@gmail.com">Kvk Praneeth</maintainer>
  <license>BSD</license>
  <author email="praneeth.pep@gmail.com">Kvk Praneeth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>turtlebot_control</depend>
  <depend>turtlebot_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>


