<package format='2'>

  <name>turtlebot_control</name>
  <version>1.0.0</version>
  <description>
  turtlebot_control package.
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

</package>