<package format='2'>

  <name>turtlebot_mapping</name>
  <version>1.0.0</version>
  <description>
  turtlebot_mapping package.
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>gmapping</depend>

</package>
