<package format='2'>

  <name>turtlebot_msgs</name>
  <version>1.0.0</version>
  <description>
    turtlebot_msgs package.
  </description>
  <maintainer email="praneeth.pep@gmail.com">kvk praneeth</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>